# FlaskSim

./: .gitignore  README.md  app.py  prd.md  pyproject.toml  requirements.txt  run_flasksim.bat  task.md  test.md
static/css/: style.css
static/js/: script.js
templates/: index.html  results.html
tests/: test_app.py
